
datadir = ${prefix}/share/moldeodirector
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
desktopdir = ${prefix}/share/applications
pixmapsdir = ${prefix}/share/pixmaps
testdir = ${datadir}/test
testsimpledir = ${testdir}
samplesdir = ${datadir}/samples
simpleprojectdir = ${datadir}/samples/SimpleProject
camerasdir = ${datadir}/samples/Cameras
camerascirculardir = ${datadir}/samples/CamerasCircular
livedrawingdir = ${datadir}/samples/LiveDrawing
particlesbouncedir = ${datadir}/samples/ParticlesBounce
particlesinteractivedir = ${datadir}/samples/ParticlesInteractive
particlesinteractiveshaderdir = ${datadir}/samples/ParticlesInteractive/shaders
shaderexampledir = ${datadir}/samples/ShaderExample
shaderexampleshadersdir = ${datadir}/samples/ShaderExample/shaders
videobuffersdir = ${datadir}/samples/VideoBuffers
videobuffersshadersdir = ${datadir}/samples/VideoBuffers/shaders
videobuffersbufdir = ${datadir}/samples/VideoBuffers/vbuffer_sub
channelcontroldir = ${datadir}/samples/ChannelControl
dibujoconluzdir = ${datadir}/samples/Dibujo_con_luz
rainparticlesdir = ${datadir}/samples/Rain_Particles
rainparticlesshadersdir = ${datadir}/samples/Rain_Particles/shaders
snowparticlesdir = ${datadir}/samples/Snow_Particles
snowparticlesshadersdir = ${datadir}/samples/Snow_Particles/shaders

dist_dibujoconluz_DATA = samples/Dibujo_con_luz/camara.cfg\
			samples/Dibujo_con_luz/camara_espejada.cfg\
			samples/Dibujo_con_luz/cuadblanco.png\
			samples/Dibujo_con_luz/cuadnegro.png\
			samples/Dibujo_con_luz/debug.cfg\
			samples/Dibujo_con_luz/dibujo_con_luz.mol\
			samples/Dibujo_con_luz/erase.cfg\
			samples/Dibujo_con_luz/icam.cfg\
			samples/Dibujo_con_luz/mascara.cfg\
			samples/Dibujo_con_luz/mezcla.cfg\
			samples/Dibujo_con_luz/movie.cfg\
			samples/Dibujo_con_luz/musica.cfg\
			samples/Dibujo_con_luz/videomanager.cfg

dist_rainparticles_DATA = samples/Rain_Particles/blur.cfg\
			samples/Rain_Particles/lluvia11.cfg\
			samples/Rain_Particles/lluvia.cfg\
			samples/Rain_Particles/postfx.cfg\
			samples/Rain_Particles/Rain.wav\
			samples/Rain_Particles/sonido.cfg\
			samples/Rain_Particles/erase.cfg\
			samples/Rain_Particles/lluvia1.cfg\
			samples/Rain_Particles/pfx.cfg\
			samples/Rain_Particles/Rain_Particles.mol\
			samples/Rain_Particles/star.tga

dist_rainparticlesshaders_DATA = samples/Rain_Particles/shaders/Sobel.cfg\
				samples/Rain_Particles/shaders/Sobel.glsl

dist_snowparticles_DATA = samples/Snow_Particles/blur.cfg\
			samples/Snow_Particles/snow11.cfg\
			samples/Snow_Particles/snow1.cfg\
			samples/Snow_Particles/snow.cfg\
			samples/Snow_Particles/postfx.cfg\
			samples/Snow_Particles/Blizzard.wav\
			samples/Snow_Particles/sonido.cfg\
			samples/Snow_Particles/erase.cfg\
			samples/Snow_Particles/pfx.cfg\
			samples/Snow_Particles/Snow_Particles.mol\
			samples/Snow_Particles/star.tga

dist_snowparticlesshaders_DATA = samples/Snow_Particles/shaders/Sobel.cfg\
				samples/Snow_Particles/shaders/Sobel.glsl


dist_pixmaps_DATA = icons/moldeologo.xpm \
		    icons/moldeologo48x48.png\
		    icons/moldeodirector.png\
		    icons/moldeodirector.xpm

dist_desktop_DATA = desktop/moldeodirector.desktop

dist_fonts_DATA = fonts/Tuffy.ttf
dist_cursors_DATA = cursors/copy_cur.cur \
		    cursors/drag_cur.cur \
		    cursors/edit_cur.cur \
		    cursors/move_cur.cur

dist_icons_DATA = icons/moldeologo.xpm \
icons/moldeologo48x48.png\
icons/moldeodirector.png\
icons/moldeodirector.xpm\
icons/add.png \
icons/api_16.png \
icons/arrow_sans_down_16.png \
icons/arrow_sans_right_16.png \
icons/category_16.png \
icons/colors.png \
icons/copy_cur.cur \
icons/csvColors256.png \
icons/csvColors32.png \
icons/csvColors64.png \
icons/delete.png \
icons/drag_cur.cur \
icons/edit_cur.cur \
icons/ff.jpg \
icons/folder_sans_16.png \
icons/fullscreen32.png \
icons/functiontest.png \
icons/help.jpg \
icons/image_16.png \
icons/imageempty.png \
icons/image_run_16.png \
icons/import.png \
icons/information.jpg \
icons/inspect.png \
icons/layercontrols.png \
icons/Moldeo32.ico \
icons/moldeologo.png \
icons/more.png \
icons/motioncircular.png \
icons/motiondiagonal.png \
icons/motionhorizontal.png \
icons/motionrandom.png \
icons/motionvertical.png \
icons/move_cur.cur \
icons/off32.png \
icons/off.jpg \
icons/on32.png \
icons/on.jpg \
icons/onoffall32.png \
icons/onoffall.jpg \
icons/onofficon32.png \
icons/onofficon.jpg \
icons/ontology_16.png \
icons/output32.png \
icons/patron16.png \
icons/patron96.png \
icons/pause32.png \
icons/pause.jpg \
icons/pickcolor.png \
icons/play32dis.png \
icons/play32.png \
icons/play.jpg \
icons/rdf_16.png \
icons/relevance_16.png \
icons/rewind.jpg \
icons/rotate.png \
icons/savesession32.png \
icons/savevideo32.png \
icons/scale.png \
icons/screenshot32.png \
icons/search_16.png \
icons/select.png \
icons/server_16.png \
icons/server_edit_16.png \
icons/set.png \
icons/settings_16.png \
icons/sitemap_16.png \
icons/skip.jpg \
icons/stop32.png \
icons/stop.jpg \
icons/translate.png \
icons/video_16.png \
icons/video_run_16.png \
icons/view_16_off.png \
icons/view_16.png \
icons/visibilitynone.png \
icons/visibility.png \
icons/volume.jpg


dist_testsimple_DATA = \
		test/test.mol \
		test/erase.cfg \
		test/debug.cfg \
		test/icon.cfg

dist_test_DATAx = \
		test/imagenes/tunel/ilus00.tga \
		test/imagenes/tunel/ilus01.tga \
		test/imagenes/tunel/ilus02.tga \
		test/imagenes/tunel/ilus03.tga \
		test/fonts/arial.ttf \
		test/images/pintura.jpg \
		test/images/pajarito.png \
		test/images/pececito.png \
		test/shaders/painter/ColorPart.glsl \
		test/shaders/painter/RenderGrad2fp.glsl \
		test/shaders/painter/RenderAveGrad.glsl \
		test/shaders/painter/RenderBrushes.glsl \
		test/shaders/painter/MovePart.glsl \
		test/shaders/kltgpu/nvidia/w1.cg \
		test/shaders/kltgpu/nvidia/blue.cg \
		test/shaders/kltgpu/nvidia/w2.cg \
		test/shaders/kltgpu/nvidia/matrixelem1.cg \
		test/shaders/kltgpu/nvidia/matrixelem2.cg \
		test/shaders/kltgpu/nvidia/matrixelem3.cg \
		test/shaders/kltgpu/nvidia/undistort.cg \
		test/shaders/kltgpu/nvidia/partialsum1.cg \
		test/shaders/kltgpu/nvidia/partialsum2.cg \
		test/shaders/kltgpu/nvidia/pass.cg \
		test/shaders/kltgpu/nvidia/chan.cg \
		test/shaders/kltgpu/nvidia/corner1.cg \
		test/shaders/kltgpu/nvidia/red.cg \
		test/shaders/kltgpu/nvidia/corner2a.cg \
		test/shaders/kltgpu/nvidia/corner2b.cg \
		test/shaders/kltgpu/nvidia/matrixsolve.cg \
		test/shaders/kltgpu/nvidia/corner2c.cg \
		test/shaders/kltgpu/nvidia/white.cg \
		test/shaders/kltgpu/nvidia/floatingwin.cg \
		test/shaders/kltgpu/nvidia/matrixsolve_f.cg \
		test/shaders/kltgpu/ati/w1.cg \
		test/shaders/kltgpu/ati/blue.cg \
		test/shaders/kltgpu/ati/w2.cg \
		test/shaders/kltgpu/ati/matrixelem1.cg \
		test/shaders/kltgpu/ati/matrixelem2.cg \
		test/shaders/kltgpu/ati/matrixelem3.cg \
		test/shaders/kltgpu/ati/undistort.cg \
		test/shaders/kltgpu/ati/partialsum1.cg \
		test/shaders/kltgpu/ati/partialsum2.cg \
		test/shaders/kltgpu/ati/pass.cg \
		test/shaders/kltgpu/ati/chan.cg \
		test/shaders/kltgpu/ati/corner1.cg \
		test/shaders/kltgpu/ati/red.cg \
		test/shaders/kltgpu/ati/corner2a.cg \
		test/shaders/kltgpu/ati/corner2b.cg \
		test/shaders/kltgpu/ati/matrixsolve.cg \
		test/shaders/kltgpu/ati/corner2c.cg \
		test/shaders/kltgpu/ati/white.cg \
		test/shaders/kltgpu/ati/floatingwin.cg \
		test/shaders/kltgpu/ati/matrixsolve_f.cg \
		test/shaders/livedrawing/LineAntialising.cfg \
		test/shaders/livedrawing/LineAntialising.glsl \
		test/shaders/livedrawing/VertexProcessing.glsl \
		test/shaders/Posterize.cfg \
		test/shaders/Mixer.glsl \
		test/shaders/PixelateDyn.glsl \
		test/shaders/Saturate.cfg \
		test/shaders/GridEmboss.cfg \
		test/shaders/PulseGrid.glsl \
		test/shaders/Sharpen.cfg \
		test/shaders/PulseEmboss.cfg \
		test/shaders/ColorMatrix.cfg \
		test/shaders/DynEmboss.cfg \
		test/shaders/DynSaturate.cfg \
		test/shaders/Blur.cfg \
		test/shaders/ColorMatrix.glsl \
		test/shaders/DynEmboss.glsl \
		test/shaders/DynSaturate.glsl \
		test/shaders/Maxxml.cfg \
		test/shaders/Edgesxml.cfg \
		test/shaders/Copy.cfg \
		test/shaders/PixelateDyn2.glsl \
		test/shaders/Pixelate.cfg \
		test/shaders/Pixelate.glsl \
		test/shaders/Mixer.cfg \
		test/shaders/RenderGrad2fp.cfg \
		test/shaders/Posterize.glsl \
		test/shaders/Edges.cfg \
		test/shaders/Max.glsl \
		test/shaders/Edges.glsl \
		test/shaders/Saturate.glsl \
		test/shaders/BilinearFilter.cfg \
		test/shaders/BilinearFilter.glsl \
		test/shaders/MovePart.cfg \
		test/shaders/Sharpen.glsl \
		test/shaders/StaticEmboss.glsl \
		test/shaders/TexInterpolator.cfg \
		test/shaders/ColorPart.cfg \
		test/shaders/CopyRGB.cfg \
		test/shaders/TexInterpolator.glsl \
		test/shaders/Blur.glsl \
		test/shaders/CopyRGB.glsl \
		test/shaders/RenderAveGrad.cfg \
		test/shaders/RenderBrushes.cfg \
		test/shaders/Copy.glsl \
		test/iconos/brushes/diagonal_lines.tga \
		test/iconos/brushes/dots.tga \
		test/iconos/brushes/brush_normal.tga \
		test/iconos/brushes/diagonal.tga \
		test/iconos/brushes/simple_round.tga \
		test/iconos/brushes/brush.tga \
		test/iconos/estrellas/shine.tga \
		test/iconos/estrellas/star.tga \
		test/iconos/estrellas/spark.tga \
		test/objetos/iconos3d \
		test/objetos/iconos3d/logoGmol.3ds \
		test/objetos/iconos3d/moldeologo.3ds \
		test/fuentes/texto00.png \
		test/brushes/brush2.tga \
		test/brushes/brush3.tga \
		test/brushes/diagonal_lines.tga \
		test/brushes/dots.tga \
		test/brushes/brush_normal.tga \
		test/brushes/diagonal.tga \
		test/brushes/simple_round.tga \
		test/brushes/brush1.tga \
		test/mirrorg.cfg \
		test/netoscin.cfg \
		test/soundmanager.cfg \
		test/mixer.cfg \
		test/masterchannel.cfg \
		test/videowall.cfg \
		test/tunel.cfg \
		test/mouse.cfg \
		test/icon.cfg \
		test/livedrawing2.cfg \
		test/camaras.mol \
		test/erase.cfg \
		test/keyboard.cfg \
		test/videomanager.cfg \
		test/shadermanager.cfg \
		test/painter.cfg \
		test/trackerklt.cfg \
		test/icon1.cfg \
		test/icon2.cfg \
		test/cubemap.cfg \
		test/partiture.cfg \
		test/img_camara.cfg \
		test/trackergpuklt.cfg \
		test/presetpanel.cfg \
		test/image.cfg \
		test/ligia.cfg \
		test/debug.cfg \
		test/channel0.cfg \
		test/panel.cfg \
		test/plane.cfg \
		test/test_complete.mol \
		test/protconect.par \
		test/interactive.mol \
		test/test.mol \
		test/icam.cfg \
		test/mirror.cfg \
		test/tablet.cfg \
		test/movie.cfg \
		test/icon3d.cfg 

dist_simpleproject_DATA = samples/SimpleProject/simple_project.mol\
		samples/SimpleProject/debug.cfg\
		samples/SimpleProject/erase.cfg\
		samples/SimpleProject/icon.cfg\
		samples/SimpleProject/particulas.cfg\
		samples/SimpleProject/mirrorg.cfg

dist_cameras_DATA = 		samples/Cameras/cameras.mol\
		samples/Cameras/debug.cfg\
		samples/Cameras/erase.cfg\
		samples/Cameras/icam.cfg\
		samples/Cameras/videomanager.cfg


dist_camerascircular_DATA = 		samples/CamerasCircular/cameras_circular.mol\
		samples/CamerasCircular/debug.cfg\
		samples/CamerasCircular/erase.cfg\
		samples/CamerasCircular/plano0.cfg\
		samples/CamerasCircular/plano1.cfg\
		samples/CamerasCircular/plano01.cfg\
		samples/CamerasCircular/plano011.cfg\
		samples/CamerasCircular/plano0111.cfg\
		samples/CamerasCircular/plano01111.cfg\
		samples/CamerasCircular/plano011111.cfg\
		samples/CamerasCircular/plano0111111.cfg\
		samples/CamerasCircular/videomanager_circularbuffer.cfg

dist_livedrawing_DATA = 		samples/LiveDrawing/dibujo.mol\
		samples/LiveDrawing/keyboard.cfg\
		samples/LiveDrawing/mouse.cfg\
		samples/LiveDrawing/mixer.cfg\
		samples/LiveDrawing/tablet.cfg\
		samples/LiveDrawing/dibujo.cfg

dist_particlesbounce_DATA = 		samples/ParticlesBounce/particles_bounce.mol\
		samples/ParticlesBounce/debug.cfg\
		samples/ParticlesBounce/erase.cfg\
		samples/ParticlesBounce/mirrorg.cfg\
		samples/ParticlesBounce/ico.cfg\
		samples/ParticlesBounce/particles.cfg\
		samples/ParticlesBounce/particles.lua\
		samples/ParticlesBounce/flare.png\
		samples/ParticlesBounce/star.tga

dist_particlesinteractive_DATA = 		samples/ParticlesInteractive/particles_interactive.mol\
		samples/ParticlesInteractive/debug.cfg\
		samples/ParticlesInteractive/erase.cfg\
		samples/ParticlesInteractive/icam.cfg\
		samples/ParticlesInteractive/interactiveparticles.cfg\
		samples/ParticlesInteractive/interactiveparticles.lua\
		samples/ParticlesInteractive/trackerklt.cfg\
		samples/ParticlesInteractive/videomanager.cfg

dist_particlesinteractiveshader_DATA = samples/ParticlesInteractive/shaders/BilinearFilter.cfg\
		samples/ParticlesInteractive/shaders/BilinearFilter.glsl\
		samples/ParticlesInteractive/shaders/Blur.cfg\
		samples/ParticlesInteractive/shaders/Blur.glsl\
		samples/ParticlesInteractive/shaders/ColorMatrix.cfg\
		samples/ParticlesInteractive/shaders/ColorMatrix.glsl\
		samples/ParticlesInteractive/shaders/ColorPart.cfg\
		samples/ParticlesInteractive/shaders/Copy.cfg\
		samples/ParticlesInteractive/shaders/Copy.glsl\
		samples/ParticlesInteractive/shaders/CopyRGB.cfg\
		samples/ParticlesInteractive/shaders/CopyRGB.glsl\
		samples/ParticlesInteractive/shaders/DynEmboss.cfg\
		samples/ParticlesInteractive/shaders/DynEmboss.glsl\
		samples/ParticlesInteractive/shaders/DynSaturate.cfg\
		samples/ParticlesInteractive/shaders/DynSaturate.glsl\
		samples/ParticlesInteractive/shaders/Edges.cfg\
		samples/ParticlesInteractive/shaders/Edges.glsl\
		samples/ParticlesInteractive/shaders/Edgesxml.cfg\
		samples/ParticlesInteractive/shaders/Emboss.cfg\
		samples/ParticlesInteractive/shaders/EmbossEdges.cfg\
		samples/ParticlesInteractive/shaders/EmbossEdges.glsl\
		samples/ParticlesInteractive/shaders/EmbossEdgesVertex.glsl\
		samples/ParticlesInteractive/shaders/Emboss.glsl\
		samples/ParticlesInteractive/shaders/EmbossRelief.cfg\
		samples/ParticlesInteractive/shaders/EmbossRelief.glsl\
		samples/ParticlesInteractive/shaders/GridEmboss.cfg\
		samples/ParticlesInteractive/shaders/Laser.cfg\
		samples/ParticlesInteractive/shaders/Laser.glsl\
		samples/ParticlesInteractive/shaders/LaserTag.glsl\
		samples/ParticlesInteractive/shaders/Max.glsl\
		samples/ParticlesInteractive/shaders/Maxxml.cfg\
		samples/ParticlesInteractive/shaders/Mixer.cfg\
		samples/ParticlesInteractive/shaders/Mixer.glsl\
		samples/ParticlesInteractive/shaders/MovePart.cfg\
		samples/ParticlesInteractive/shaders/Pixelate.cfg\
		samples/ParticlesInteractive/shaders/PixelateDyn2.glsl\
		samples/ParticlesInteractive/shaders/PixelateDyn.glsl\
		samples/ParticlesInteractive/shaders/Pixelate.glsl\
		samples/ParticlesInteractive/shaders/Posterize.cfg\
		samples/ParticlesInteractive/shaders/Posterize.glsl\
		samples/ParticlesInteractive/shaders/PulseEmboss.cfg\
		samples/ParticlesInteractive/shaders/PulseGrid.glsl\
		samples/ParticlesInteractive/shaders/Recorte.cfg\
		samples/ParticlesInteractive/shaders/Recorte.glsl\
		samples/ParticlesInteractive/shaders/RenderAveGrad.cfg\
		samples/ParticlesInteractive/shaders/RenderBrushes.cfg\
		samples/ParticlesInteractive/shaders/RenderGrad2fp.cfg\
		samples/ParticlesInteractive/shaders/Saturate.cfg\
		samples/ParticlesInteractive/shaders/Saturate.glsl\
		samples/ParticlesInteractive/shaders/Sharpen.cfg\
		samples/ParticlesInteractive/shaders/Sharpen.glsl\
		samples/ParticlesInteractive/shaders/Sobel.cfg\
		samples/ParticlesInteractive/shaders/Sobel.glsl\
		samples/ParticlesInteractive/shaders/StaticEmboss.glsl\
		samples/ParticlesInteractive/shaders/TexInterpolator.cfg\
		samples/ParticlesInteractive/shaders/TexInterpolator.glsl\
		samples/ParticlesInteractive/shaders/ToonShading.frag\
		samples/ParticlesInteractive/shaders/ToonShading.vert


dist_shaderexample_DATA = 		samples/ShaderExample/shader_example.mol\
		samples/ShaderExample/debug.cfg\
		samples/ShaderExample/erase.cfg\
		samples/ShaderExample/mirrorg.cfg\
		samples/ShaderExample/icon.cfg\
		samples/ShaderExample/icon1.cfg\
		samples/ShaderExample/icon2.cfg\
		samples/ShaderExample/icon3.cfg

dist_shaderexampleshaders_DATA = samples/ShaderExample/shaders/BilinearFilter.cfg\
samples/ShaderExample/shaders/BilinearFilter.glsl\
samples/ShaderExample/shaders/Blur.cfg\
samples/ShaderExample/shaders/Blur.glsl\
samples/ShaderExample/shaders/ColorMatrix.cfg\
samples/ShaderExample/shaders/ColorMatrix.glsl\
samples/ShaderExample/shaders/ColorPart.cfg\
samples/ShaderExample/shaders/Copy.cfg\
samples/ShaderExample/shaders/Copy.glsl\
samples/ShaderExample/shaders/CopyRGB.cfg\
samples/ShaderExample/shaders/CopyRGB.glsl\
samples/ShaderExample/shaders/DynEmboss.cfg\
samples/ShaderExample/shaders/DynEmboss.glsl\
samples/ShaderExample/shaders/DynSaturate.cfg\
samples/ShaderExample/shaders/DynSaturate.glsl\
samples/ShaderExample/shaders/Edges.cfg\
samples/ShaderExample/shaders/Edges.glsl\
samples/ShaderExample/shaders/Edgesxml.cfg\
samples/ShaderExample/shaders/Emboss.cfg\
samples/ShaderExample/shaders/EmbossEdges.cfg\
samples/ShaderExample/shaders/EmbossEdges.glsl\
samples/ShaderExample/shaders/EmbossEdgesVertex.glsl\
samples/ShaderExample/shaders/Emboss.glsl\
samples/ShaderExample/shaders/EmbossRelief.cfg\
samples/ShaderExample/shaders/EmbossRelief.glsl\
samples/ShaderExample/shaders/GridEmboss.cfg\
samples/ShaderExample/shaders/Laser.cfg\
samples/ShaderExample/shaders/Laser.glsl\
samples/ShaderExample/shaders/LaserTag.glsl\
samples/ShaderExample/shaders/Max.glsl\
samples/ShaderExample/shaders/Maxxml.cfg\
samples/ShaderExample/shaders/Mixer.cfg\
samples/ShaderExample/shaders/Mixer.glsl\
samples/ShaderExample/shaders/MovePart.cfg\
samples/ShaderExample/shaders/Pixelate.cfg\
samples/ShaderExample/shaders/PixelateDyn2.glsl\
samples/ShaderExample/shaders/PixelateDyn.glsl\
samples/ShaderExample/shaders/Pixelate.glsl\
samples/ShaderExample/shaders/Posterize.cfg\
samples/ShaderExample/shaders/Posterize.glsl\
samples/ShaderExample/shaders/PulseEmboss.cfg\
samples/ShaderExample/shaders/PulseGrid.glsl\
samples/ShaderExample/shaders/Recorte.cfg\
samples/ShaderExample/shaders/Recorte.glsl\
samples/ShaderExample/shaders/RenderAveGrad.cfg\
samples/ShaderExample/shaders/RenderBrushes.cfg\
samples/ShaderExample/shaders/RenderGrad2fp.cfg\
samples/ShaderExample/shaders/Saturate.cfg\
samples/ShaderExample/shaders/Saturate.glsl\
samples/ShaderExample/shaders/Sharpen.cfg\
samples/ShaderExample/shaders/Sharpen.glsl\
samples/ShaderExample/shaders/Sobel.cfg\
samples/ShaderExample/shaders/Sobel.glsl\
samples/ShaderExample/shaders/StaticEmboss.glsl\
samples/ShaderExample/shaders/TexInterpolator.cfg\
samples/ShaderExample/shaders/TexInterpolator.glsl\
samples/ShaderExample/shaders/ToonShading.frag\
samples/ShaderExample/shaders/ToonShading.vert

dist_videobuffers_DATA = 		samples/VideoBuffers/video_buffers.mol\
		samples/VideoBuffers/debug.cfg\
		samples/VideoBuffers/erase.cfg\
		samples/VideoBuffers/icon.cfg\
		samples/VideoBuffers/videomanager_videobuffer.cfg
		
dist_videobuffersshaders_DATA = 		samples/VideoBuffers/shaders/Copy.cfg\
		samples/VideoBuffers/shaders/Copy.glsl\
		samples/VideoBuffers/shaders/TexInterpolator.cfg\
		samples/VideoBuffers/shaders/TexInterpolator.glsl

dist_videobuffersbuf_DATA = samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0118.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0121.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0124.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0127.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0130.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0133.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0136.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0139.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0142.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0145.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0148.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0151.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0154.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0157.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0160.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0163.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0166.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0169.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0172.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0175.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0178.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0181.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0184.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0187.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0190.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0193.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0196.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0199.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0202.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0205.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0208.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0211.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0214.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0217.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0220.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0223.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0226.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0229.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0232.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0235.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0238.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0241.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0244.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0247.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0250.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0253.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0256.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0259.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0262.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0265.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0268.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0271.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0274.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0277.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0280.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0283.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0286.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0289.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0292.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0295.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0298.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0301.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0304.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0307.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0310.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0313.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0316.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0319.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0322.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0325.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0328.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0331.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0334.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0337.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0340.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0343.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0346.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0349.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0352.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0355.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0358.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0361.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0364.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0367.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0370.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0373.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0376.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0379.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0382.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0385.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0388.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0391.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0394.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0397.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0400.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0403.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0406.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0409.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0412.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0415.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0418.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0421.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0424.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0427.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0430.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0433.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0436.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0439.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0442.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0445.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0448.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0451.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0454.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0457.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0460.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0463.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0466.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0469.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0472.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0475.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0478.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0481.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0484.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0487.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0490.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0493.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0496.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0499.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0502.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0505.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0508.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0511.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0514.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0517.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0520.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0523.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0526.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0529.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0532.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0535.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0538.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0541.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0544.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0547.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0550.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0553.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0556.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0559.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0562.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0565.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0568.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0571.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0574.jpg\
samples/VideoBuffers/vbuffer_sub/contact_intro_hd_0577.jpg

